Ajout du fichier style.css et l'ajout des contacts dans le code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"> 
     <title>Portfolio - Sekouna Kaba</title>
     <style>
         body {
@@ -108,7 +109,8 @@
 </div>
 
 <footer>
-    <p>Contact : <a href="mailto:kaba.sekouna@gmail.com" style="color:white;">kaba.sekouna@gmail.com</a></p>
+    <p>E-mail : <a href="mailto:kaba.sekouna@gmail.com" style="color:white;">kaba.sekouna@gmail.com</a></p>
+    <p>Phone : <a href="mailto:+33 06 59 02 01 57" style="color:white;">+33 06 59 02 01 57</a></p>
     <p>LinkedIn | GitHub | Medium</p>
 </footer>
 
