--- a/index.html
+++ b/index.html
@@ -4,61 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
     <title>Portfolio - Sekouna Kaba</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #2C3E50;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        .container {
-            width: 80%;
-            margin: 20px auto;
-            background: white;
-            padding: 20px;
-            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-        }
-        .profile {
-            text-align: center;
-        }
-        .profile img {
-            width: 150px;
-            border-radius: 50%;
-            margin-top: 10px;
-        }
-        h1, h2 {
-            color: #2C3E50;
-        }
-        .skills, .experience, .projects {
-            margin-top: 20px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background: #ecf0f1;
-            margin: 5px 0;
-            padding: 10px;
-            border-left: 5px solid #2C3E50;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #2C3E50;
-            color: white;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -72,6 +19,11 @@
         <img src="profile.jpg" alt="Sekouna Kaba">
         <h2>Sekouna Kaba</h2>
         <p>Data Engineer expérimenté avec plus de 10 ans d'expérience en architecture data, cloud, et BI.</p>
+    </div>
+
+    <div class="contact">
+        <p>📞 <strong>Téléphone :</strong> +33 06 59 02 21 57</p>
+        <p>🔗 <strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/sekouna-kaba" target="_blank">Mon Profil LinkedIn</a></p>
     </div>
 
     <div class="skills">
@@ -109,9 +61,7 @@
 </div>
 
 <footer>
-    <p>E-mail : <a href="mailto:kaba.sekouna@gmail.com" style="color:white;">kaba.sekouna@gmail.com</a></p>
-    <p>Phone : <a href="mailto:+33 06 59 02 01 57" style="color:white;">+33 06 59 02 01 57</a></p>
-    <p>LinkedIn | GitHub | Medium</p>
+    <p>📩 Contact : <a href="mailto:kaba.sekouna@gmail.com">kaba.sekouna@gmail.com</a></p>
 </footer>
 
 </body>
